v3.2:
  - New protocol: "Landmarks to 2D coordinates". To jump to SPA from 3d info.
  - Tolerate empty lines in tlt files
v3.1.9:
  - Reconstruction template fixed.
  - Relion 4 /dynamo  template tweaked. Specifically dynamo alignment
  - HIV template tweaked: one 3d classification removed. Mapback uses the 3d class.
  - OddEven functionality reviewed: Tilt Series set and Tomograms set have oddeven attributes/flags and
    there is no need for separate sets anymore. odd and even are internally referenced.
  - Added a new ctf tomo viewer (CtfConsensusTomoViewer)
  - ComposeTS: allowNull control added, removed validation and added _possibleOutputs

  Developers:
  - SubTomogram.getVolName() uses Coordinate3D.getTomoId()

v3.1.8:
  - SetOfSubtomoClasses improved: sampling rate set, coordinates injected

v3.1.7:
  - Templates tweaked: title and some mpi values

  Developers:
  - SetOfCoordinates and SetOfTiltSeries have a getTSIds method to return TS is contained (+ test)

v3.1.6:
  - Tilt order inferred from dose when tlt file has dose
  - Fix: subtomograms with coordinates work in absence of volId
  - HIV-HTA template: removes coords extraction and reconstruction since mapback can be done without them
  - Import Tilt series or Import tilt series movies do not work in streaming anymore
  - Import tomograms outputs "Tomograms" and defines possible outputs. Templates and tests adapted
  - Pyseg workflow template fixed (extra graphs removed)
  - HIV Reconstruction workflow template fixed (tomograms origin taken from mrc)
  - Protocols "fit vesicles" brought here from xmipptomo. Test added with filter by normals.
  Developers:
    - __init__ uses logger now
    - test_transformation fixed
    - SetOfCoordinates refactored internally to deal better with tomograms.
    - SetOfSubtomograms.iterCoordinates --> Mimics SetOfCoordinates behavior

v3.1.5:
 developers: hot fix, invalid import in test centralized layer
v3.1.4:
 users: